Fixed build not working with Java 8